src/snapshots/matcha__renderer__test__render_builder_expression.snap
---
source: src/renderer.rs
expression: "Hello {[ string_builder.from_strings([\"Anna\", \" and \", \"Bob\"]) ]}, good to meet you"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_builder.{StringBuilder}



pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append_builder(builder, string_builder.from_strings(["Anna", " and ", "Bob"]))
    let builder = string_builder.append(builder, ", good to meet you")

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}

