src/snapshots/matcha__renderer__test__render_dot_access.snap
---
source: src/renderer.rs
expression: "{> with user as MyUser\nHello{% if user.is_admin %} Admin{% endif %}"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_builder.{type StringBuilder}



pub fn render_builder(user user: MyUser) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello")
    let builder = case user.is_admin {
        True -> {
                let builder = string_builder.append(builder, " Admin")

            builder
        }
        False -> {
            
            builder
        }
}

    builder
}

pub fn render(user user: MyUser) -> String {
    string_builder.to_string(render_builder(user: user))
}


