src/snapshots/matcha__renderer__test__render_for_from_expression.snap
---
source: src/renderer.rs
expression: "Hello {% for item as Item in list.take(list, 2) %}{{ item }}{% endfor %}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}
import gleam/list



pub fn render_tree() -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Hello ")
    let tree = list.fold(list.take(list, 2), tree, fn(tree, item: Item) {
            let tree = string_tree.append(tree, item)

        tree
})

    tree
}

pub fn render() -> String {
    string_tree.to_string(render_tree())
}
