src/snapshots/matcha__renderer__test__render_for_loop.snap
---
source: src/renderer.rs
expression: "{> with list as List(String)\nHello,{% for item in list %} to {{ item }} and {% endfor %} everyone else"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}
import gleam/list



pub fn render_tree(list list: List(String)) -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Hello,")
    let tree = list.fold(list, tree, fn(tree, item) {
            let tree = string_tree.append(tree, " to ")
    let tree = string_tree.append(tree, item)
    let tree = string_tree.append(tree, " and ")

        tree
})
    let tree = string_tree.append(tree, " everyone else")

    tree
}

pub fn render(list list: List(String)) -> String {
    string_tree.to_string(render_tree(list: list))
}
