src/snapshots/matcha__renderer__test__render_function_and_usage.snap
---
source: src/renderer.rs
expression: "{> fn name()\nLucy\n{> endfn\nHello {[ name() ]}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}

fn name() -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Lucy")

    tree
}

pub fn render_tree() -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Hello ")
    let tree = string_tree.append_tree(tree, name())

    tree
}

pub fn render() -> String {
    string_tree.to_string(render_tree())
}
