src/snapshots/matcha__renderer__test__render_function_with_for_loop.snap
---
source: src/renderer.rs
expression: "{> fn full_name(names: List(String))\n{% for name in names %}{{ name }},{% endfor %}\"\n{> endfn\nHello {[ names(\"Gleam\") ]}"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_builder.{type StringBuilder}
import gleam/list

fn full_name(names: List(String)) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = list.fold(names, builder, fn(builder, name) {
            let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, ",")

        builder
})
    let builder = string_builder.append(builder, "\"")

    builder
}

pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append_builder(builder, names("Gleam"))

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}


