src/snapshots/matcha__renderer__test__render_gleam_expression.snap
---
source: src/renderer.rs
expression: "{> import gleam/string\nHello {{ string.uppercase(name) }}, good to meet you"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_builder.{StringBuilder}

import gleam/string

pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append(builder, string.uppercase(name))
    let builder = string_builder.append(builder, ", good to meet you")

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}

