src/snapshots/matcha__renderer__test__render_identifier.snap
---
source: src/renderer.rs
expression: "{> with name as String\nHello {{ name }}, good to meet you"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_builder.{StringBuilder}



pub fn render_builder(name name: String) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, ", good to meet you")

    builder
}

pub fn render(name name: String) -> String {
    string_builder.to_string(render_builder(name: name))
}

