src/snapshots/matcha__renderer__test__render_if_comparison.snap
---
source: src/renderer.rs
expression: "Hello {% if items != [] %}Some items{% endif %}"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_builder.{type StringBuilder}



pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = case items != [] {
        True -> {
                let builder = string_builder.append(builder, "Some items")

            builder
        }
        False -> {
            
            builder
        }
}

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}


